# CompilerTheory

./: .gitignore  CMakeLists.txt  CompilerTheory.cpp  CompilerTheory.h  README.md
docs/: JSON_FORMAT_SPEC.md
include/: ast.h  irgen.h  lexer.h  parser.h  quadruple.h  semantic.h  symtab.h  token.h
output/: output.txt
src/: irgen.cpp  lexer.cpp  parser.cpp  semantic.cpp  symtab.cpp
src/GUI/: compilercontroller.cpp  compilercontroller.h  compilermodel.cpp  compilermodel.h  compilerview.cpp  compilerview.h  main.cpp  mainwindow.cpp  mainwindow.h
src/GUI/core/: compilercontroller.cpp  compilercontroller.h  compilermodel.cpp  compilermodel.h  compilerview.cpp  compilerview.h  mainwindow.cpp  mainwindow.h
src/GUI/resources/: resources.qrc  style.qss
src/GUI/widgets/: asttreedelegate.cpp  asttreedelegate.h  sidepanel.cpp  sidepanel.h  tokencardwidget.cpp  tokencardwidget.h  welcomepage.cpp  welcomepage.h
test/: test.xt  test1.src  test1_ast.json  test1_ir.json  test1_semantic.json  test1_tokens.json  test2.src  test2_ast.json  test2_ir.json  test2_semantic.json  test2_tokens.json  test3.src  test3_ast.json  test3_ir.json  test3_semantic.json  test3_tokens.json  test_ast.json  test_tokens.json
